2015-04-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (count_bytes): Add special handling of 
	case when output encoding is UTF-8, and for other encodings save 
	result of Encode::find_encoding between function calls.

2015-04-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (new_formatter): Replace
	function call to get_conf with hash lookup.
	(_count_added): Call Texinfo::Common::count_bytes directly 
	instead of via _add_text_count, and inline _add_lines_count.

2015-04-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Variables) <mouse>: Add note about text 
	selection with the mouse.

2015-04-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes): Follow menus inexactly before 
	checking indices sloppily.  Reported by Benno Schulenberg.
	* info/indices.c (look_in_indices): Arguments changed.

2015-04-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (forward_move_node_structure) <Up and Next>,
	(backward_move_node_structure) <Prev and down>: Clean up window
	history so to add only one node in history.  Report from Benno 
	Schulenberg.
	(backward_move_node_structure): Case-insensitive check for name 
	of (dir).

2015-04-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/texi2dvi: Comments changed.

2015-04-06  Sergey Poznyakoff  <gray@gnu.org>

	* util/texi2dvi (comment_iftex, uncomment_iftex): preserve @top
	node for first run to avoid makeinfo complaint.
	Mail to bug-texinfo, 02 Mar 2015 11:38:53 (and thread ff.,
	continuing into April).
	
2015-04-06  Eli Zaretskii  <eliz@gnu.org>

	* info/pcterm.c (w32_info_prep): Enable mouse input.
	(w32_kbd_read): Support mouse wheel events by scrolling display
	like mouse_event_handler does.

2015-04-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes) <--node>: Look through node 
	names of file for argument, and if not found look for a 
	case-insensitive initial match.